[BIB] biblio update

--- a/doc/biblio/bib/phd.bib
+++ b/doc/biblio/bib/phd.bib
@@ -1851,3 +1851,19 @@
 	year = "1961"
 }
 
+@article{vonfoerster1960doomsdayfridaynovemberad,
+	author = "von Foerster, Heinz and Mora, Patricia M. and Amiot, Lawrence W.",
+	doi = "10.1126/science.132.3436.1291",
+	eprint = "http://science.sciencemag.org/content/132/3436/1291.full.pdf",
+	issn = "0036-8075",
+	journal = "Science",
+	localfile = "../pdfs/vonfoerster1960doomsdayfridaynovemberad.pdf",
+	number = "3436",
+	pages = "1291--1295",
+	publisher = "American Association for the Advancement of Science",
+	title = "{Doomsday: Friday, 13 November, A.D. 2026}",
+	url = "http://science.sciencemag.org/content/132/3436/1291",
+	volume = "132",
+	year = "1960"
+}
+
