[BSC] symposium doctorate presented version

--- a/doc/conferences/201605_BSC2/presentation.tex
+++ b/doc/conferences/201605_BSC2/presentation.tex
@@ -79,18 +79,19 @@
 \section{Introduction}
 
 \begin{frame}{Cultural Evolution}
+    Social Traits:
     \begin{center}
 	\begin{table}
 	    \center
 	    \begin{tabular}{ccc}
-		\uncover<1->{\includegraphics[height=3cm]{images/m80}} &
-		\uncover<2->{\includegraphics[height=3cm]{images/m90}} &
-		\uncover<3->{\includegraphics[height=3cm]{images/m10}} \\
-		\uncover<1->{80's} & \uncover<2->{90's} & \uncover<3->{now}
+		\uncover<2->{\includegraphics[height=3cm]{images/m80}} &
+		\uncover<3->{\includegraphics[height=3cm]{images/m90}} &
+		\uncover<4->{\includegraphics[height=3cm]{images/m10}} \\
+		\uncover<2->{80's} & \uncover<3->{90's} & \uncover<4->{now}
 	    \end{tabular}
 	\end{table}
     \end{center}
-    \uncover<4->{How Social Traits Evolve?}\uncover<5>{ Cultural Evolution }
+    \uncover<5->{How they Evolve?}\uncover<6>{ Cultural Evolution }
 \end{frame}
 
 %\begin{frame}
@@ -110,15 +111,14 @@
 %\end{frame}
 
 \begin{frame}{Cultural Evolution}
-    \uncover<1->{Social traits:}
     \begin{itemize}
 	\item<5->{ culturally transmitted, socially learnt}
 	\item<6->{ similar patterns}
     \end{itemize}
 	\begin{center}
-		\uncover<2->{\includegraphics[width=3cm]{images/cutdog}}\\
+		\uncover<4->{\includegraphics[width=3cm]{images/cutdog}}\\
 		\vspace{.5cm}
-		\uncover<4->{\includegraphics[width=2.5cm]{images/cutbaby}}
+		\uncover<2->{\includegraphics[width=2.5cm]{images/cutbaby}}
 	    \hspace{1cm}
 	    \uncover<3->{ \includegraphics[width=2cm]{images/pottery}}
 	\end{center}
@@ -211,14 +211,24 @@
 %\end{frame}
 
 %Slide xavi wanted me to put but I cannot make it fit
-%\begin{frame}{Material}
-%    Available database, twitter, photo\dots
-%
-%    $\rightarrow$ Comparison between cultures and across time need : Archaeology.
-%
-%    
-%\end{frame}
+\begin{frame}{Material}
+Usually, to perform such study:\\
+	Facebook, twitter, database of photos\dots\\
+	    \vspace{.5cm}
+	    \begin{alertblock}{Biases} 
+	Comparison between cultures and across time is needed : \\
+	    \begin{center}
+		\uncover<2>{\large \textbf{Archaeology}}
+	    \end{center}
+	
+    \end{alertblock}
+\end{frame}
 
+\begin{frame}
+    \centering
+    \Large
+    Our Model
+\end{frame}
 
 \begin{frame}{A General Agent Based Framework }
 
@@ -321,17 +331,17 @@
 \begin{frame}{Summary}
 \begin{itemize}
 		\vfill
-	    \item Culture Mechanism $\rightarrow$ Economy : 
-		\begin{itemize}
-		    \item Random Mechanism: inefficient eco.
-		    \item Biased Mechanism: efficient eco.
-		\end{itemize}
-		\vfill
 	    \item Economic Dynamic $\rightarrow$ Culture :
 			\begin{itemize}
 			    \item Random social learning: scale-free distribution of trait. 
 			    \item Social learning biased toward economic attribute: non power-law distribution.
 			\end{itemize}
+		\vfill
+	    \item Culture Mechanism $\rightarrow$ Economy : 
+		\begin{itemize}
+		    \item Random Mechanism: inefficient eco.
+		    \item Biased Mechanism: efficient eco.
+		\end{itemize}
 		\vfill
 	\item A local copy mechanism alone is enough to bring the global economy to an optimal equilibrium.
 \end{itemize}
@@ -356,9 +366,19 @@
 
 \begin{frame}{}
 
-    {\large Simulation as a tool to implement and test hypothesis made on Historical questions.}\\
+    {\large Study Cultural evolution \textbf{is not} possible without archaeology studies}
     \vspace{.5cm}
-	{\scriptsize( Carrignon et al., Model \& Simluation 7, May 2016, BCN )}
+    \uncover<2->{
+    \begin{center}
+	and
+    \end{center}
+    \vspace{.5cm}
+}
+
+\uncover<3>{    {\large Simulation as a tool to implement and test hypothesis made on Historical questions.}\\
+    \vspace{.5cm}
+	{\scriptsize(Carrignon et al., Model \& Simluation 7, May 2016, BCN)}
+    }
 	
 \end{frame}
 
