[MS7] commit oublié de la vieille : image d'exemple

--- a/doc/conferences/201605_MS7/presentation.tex
+++ b/doc/conferences/201605_MS7/presentation.tex
@@ -69,28 +69,44 @@
 \begin{document}
 
 \begin{frame}{Introduction}
+   History is complex 
+   \begin{enumerate}
+       \item Evolutionary Biology approach
+       \item Analogy to History
+       \item Computeur Model
+       \item interdisciplinary
+   \end{enumerate}
+
 %Incompleteness and uncertainty of the historical and archaeological record affect historical interpretation \cite{madella2014}. In this paper, we argue that \emph{formal modelling} and computer Simulation are valuable tools to overcome such limitations. We first show how evolutionary biologists have successfully embraced these tools and why their epistemological framework is close to what archaeologists and historians do. We then defend how those M\&S are good heuristic tools in science in general and we finished by introducing an interdisciplinary research setting, where the previous points can be exploited in a meaningful way to investigate historical questions.
 \end{frame}
 
-\begin{frame}{Evolutionary Biology}
+%\begin{frame}{Evolutionary Biology}
 %The goal of evolutionary biologists is to understand the mechanisms at the origin of the living world as we can observe it. Assuming the theory of evolution, they characterise the succession of past events that constitute this story. Starting with Gould \cite{gould1989wonderfullife}, several biologists and philosophers have argued that the nature of this research activity is historical \cite{beatty1995evolutionary}: the actual biological world does not depend \emph{only} on biological rules, but on the uniqueness of the succession of events. To encompass the issues raised by such historicity, evolutionary biologists use, at least since the Modern Synthesis, formal models to figure out different possible successions of events and the likelihood of such possible historical paths, and they test it against the available data.
-\end{frame}
+%\end{frame}
 
 \begin{frame}{Evolutionary Biology}
+What succession of events have lead to biology as we know it?
 	\begin{center}
-		\includegraphics[width=.9\textheight]{images/philoLife.png}
+		\includegraphics[width=.6\textheight]{images/philoLife.png}
 	\end{center}
+\end{frame}
+\begin{frame}{Critiscisme}
+    Critics of Darwin theory:
+    \begin{itemize}
+	\item Difficult to proove
+	\item Quantification problems (Jenkins)
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{Contingency}
 	\begin{itemize}
 		\item Gould Wonderful Life  
-		\item Beat Contingency thesis
+		\item Beatty Contingency thesis
 	\end{itemize}
 \end{frame}
 
 
-\begin{frame}{ }
+\begin{frame}{Evolutionary biology toolkit} 
 	\begin{itemize}
 		\item<1-> Since the biometricien :\\
 			Detecting Pattern\\
@@ -107,7 +123,13 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}
+\begin{frame}{History}
+    Understand succesion of event leading to nowadays human society:
+    \begin{itemize}
+	\item Quantification Problems
+	\item Hypothesis difficult to test
+    \end{itemize}
+
 %This suggest that (i) the problems encountered by evolutionary biologists are close to those archaeologists and historians have to face (ii) the way inferences are made about the history of living beings and the history of human societies fall into a similar epistemological framework and (iii) mathematical and computer models are good candidates to infer, in a statistically plausible and transparent way, missing data and complex hypotheses in both enterprise.
 \end{frame}
 
@@ -127,8 +149,21 @@ Rubio-Campillo 2015
 	
 \end{frame}
 
+\begin{frame}{Compare Historical Hypothesis}
+	\begin{itemize}
+		\item Test \& Compare Hypotheses.
+	\end{itemize}
+
+Rubio-Campillo 2015
+
+	
+\end{frame}
+
 \begin{frame}
 	Brughman \& Poblome 2016
+	\begin{center}
+	    \includegraphics[width=.8\textwidth]{images/marketIntegration.png}
+	\end{center}
 \end{frame}
 
 
